--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "lodash": "^4.17.21",
+    "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-kakao": "^1.0.1",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
@@ -48,6 +50,7 @@
     "@types/jest": "^29.5.2",
     "@types/lodash": "^4.17.15",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
