.env.example 변경

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,10 @@ GOOGLE_CALLBACK_URL=
 KAKAO_CLIENT_ID=
 KAKAO_CLIENT_SECRET=
 KAKAO_CALLBACK_URL=
+
+# SMTP
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_FROM=
