--- a/compose.yml
+++ b/compose.yml
@@ -15,9 +15,14 @@ services:
       - 5432:5432
     env_file:
       - .env
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -U postgres']
       interval: 10s
       timeout: 5s
       retries: 5
       start_period: 5s
+
+volumes:
+  postgres_data:
